Implement debug classes for the installer